# KafkaHW

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
app_pages/: prediction_page.py  realtime_page.py  visualization_page.py
backend/: consumers.py  producers.py
models/: __init__.py  base.py  exponential_ma.py  linear_regression.py
